--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<h1>나의 첫 웹 페이지</h1>
-<p>저는 지금 코딩을 배우고 있습니다</p>
-<img src="images/붉은 악마 캐릭터의 분노.png" alt="붉은 악마 캐릭터" width="300">
+<head>
+    <meta charset="utf-8">
+    <title>images</title>
+</head>
+<body>
+    <h1>images</h1>
+    <ul>
+        <li><a href="붉은 악마 캐릭터의 분노.png">red-devil.png</a></li>
+    </ul>
+</body>
+</html>
