--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-<!doctype html>
-<html>
-<head>
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
     <meta charset="utf-8">
-    <title>images</title>
-</head>
-<body>
-    <h1>images</h1>
-    <ul>
-        <li><a href="붉은 악마 캐릭터의 분노.png">red-devil.png</a></li>
-    </ul>
-</body>
+    <title>이미지 갤러리</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <body>
+    붉은 악마
+  </body>
 </html>
